# email-validation-apice074a8e-127a-4cbf-ae4a-e0856e77e7d6

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: server.py  validate_email_service.py
