[tool.poetry]
name = "email-validation-api"
version = "0.1.0"
description = "Based on the task requirements and the information gathered, the goal is to create an email validation endpoint using FastAPI and Python, which incorporates various checks to ensure an email's validity. Here are the key steps to accomplish this:"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
dnspython = "^2.2.1"
email-validator = "*"
fastapi = "*"
prisma = "*"
pydantic = "*"
uvicorn = "*"
validate-email = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
